proc-macro-error-attr/tests/ui/not_proc_macro.stderr
error: #[proc_macro_error] attribute can be used only with a proc-macro
 --> $DIR/not_proc_macro.rs:3:1
  |
3 | #[proc_macro_error]
  | ^^^^^^^^^^^^^^^^^^^
